# flatjson

./: .travis.yml  CMakeLists.txt  README.md  README.rst  flatjson.h  flatjson.hpp  inst.cpp  main.cpp  parsetest.cpp
.github/workflows/: c-cpp.yml
benchmark/: CMakeLists.txt  benchmark.cpp  main.cpp  run.sh
examples/c-style/: CMakeLists.txt  main.cpp
examples/cpp-style/: CMakeLists.txt  main.cpp
include/flatjson/: flatjson.hpp  io.hpp  version.hpp
jsonchecker/: pass03.json
test/: CMakeLists.txt  inst.cpp  main.cpp  small_file_text_integer.json
test/roundtrip/: roundtrip-double.json
